Update README.md
Changement de l'execution