@@ -1,1 +1,4 @@
 # ChampoLoveJavaFX
+
+Executer ceci en s'aasurant que le chemin vers javafx ce situe là où il le faut
+java --module-path "d:\chemin\vers\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml -cp bin application.Main
